fixed positioning of photos on mobile

--- a/css/custom.css
+++ b/css/custom.css
@@ -92,7 +92,7 @@ h4.service-heading
 
 .about-logo
 {
-  margin-top: -5rem!important;
+  margin-top: -3rem!important;
   margin-bottom: 2rem!important;
 }
 
